Culminacion de gran parte del feature de ordenes, tipos, estados, traducciones, incidentes, documentos aun falta validar con emails, y validaciones extra en logica de negocio